# inspire-teleoperation

./: .gitignore  README.md  main.py  pyproject.toml
docs/: API.zh-CN.md
inspire_teleoperation/: __init__.py  __main__.py  api.py  dexhand.py  hand_controller.py  hand_module.py  hand_retargeting.py  main.py  quest_source.py  runtime.py  web_ui.py
inspire_teleoperation/assets/hand_model/: retargeting.yml
inspire_teleoperation/web/: app.css  app.js  index.html
tests/: __init__.py  test_extracted_module.py
