[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspire-teleoperation"
version = "0.1.0"
description = "Quest hand tracking to Inspire dexterous-hand Modbus teleoperation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dex-retargeting",
    "logging-mp>=0.2.2",
    "numpy>=1.26,<2.0",
    "params-proto==2.13.0",
    "pymodbus>=3.7,<4.0",
    "pyyaml>=6.0",
    "televuer==4.0.0",
]

[project.scripts]
inspire-teleoperation = "inspire_teleoperation.main:main"

[tool.setuptools.package-data]
inspire_teleoperation = [
    "assets/hand_model/*.yml",
    "assets/hand_model/*.urdf",
    "assets/hand_model/meshes/*.STL",
    "web/*",
]

[tool.uv.sources]
dex-retargeting = { git = "https://github.com/silencht/dex-retargeting", rev = "d7753d38c9ff11f80bafea6cd168351fd3db9b0e" }
televuer = { git = "https://github.com/unitreerobotics/televuer", rev = "6b9aafd0b357d31de5e9e8edd2ee322575bd8b8d" }
